# slate-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  make
.cargo/: config.toml
examples/: .env  compose.yaml  sysd.tera  sysd.yaml.tera
src/: formats.rs  lib.rs  main.rs  quadlet.rs  systemd.rs  utils.rs
src/snapshots/: slate__quadlet__tests__process_quadlets_bookstack-app.container.snap  slate__quadlet__tests__process_quadlets_bookstack-db.container.snap  slate__quadlet__tests__service_with_timer_service.snap  slate__systemd__tests__service_with_timer_service.snap  slate__systemd__tests__service_with_timer_timer.snap
tests/: sysd.tera  systemd_tests.rs
tests/fixtures/: compose.yaml  kavita-compose.yaml
tests/integration/: main.rs  quadlet.rs  systemd.rs
tests/integration/snapshots/: integration__quadlet__process_compose.snap  integration__systemd__service_with_timer_service.snap  integration__systemd__service_with_timer_timer.snap  systemd_tests__service_with_timer_service.snap  systemd_tests__service_with_timer_timer.snap
tests/snapshots/: systemd_tests__service_with_timer_service.snap  systemd_tests__service_with_timer_timer.snap
