[package]
name = "slate-rs"
version = "0.1.0"
edition = "2018"
license = "MIT"
description ="translate file formats + goodies"
keywords = ["serde", "convert", "quadlet", "systemd"]

[lib]
name = "slaters"
path = "src/lib.rs"

[[bin]]
name = "slate"
path = "src/main.rs"

[dependencies]
# serialization & deserialization
serde = "^1"
serde_json = "^1"
serde_yaml = "^0.9"
serde_cbor = "^0.11"
ron = "^0.8"
toml = "^0.8"
bson = "^2"
erased-serde = "^0.4"
serde_ini = "0.2.0"

serde-pickle = "^1"
bincode = "^1"
postcard = { version = "^1", features = [ "alloc" ] }
flexbuffers = "^2.0"

clap = { version = "^4", features = ["derive"] }
anyhow = "^1.0"
indexmap = { version = "^2", features = ["serde"] }
tera = "^1"
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.11.1"
demand = "1.7.0"
tempfile = "^3"

[dev-dependencies]
serde_yaml = "^0.9"
anyhow = "^1.0"
tempfile = "^3"
assert_cmd = "^2"
predicates = "^3"
insta = { version = "^1", features = ["yaml"] }

[features]
integration-tests = []